# pyogrio

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGES.md  LICENSE  MANIFEST.in  Pipfile  README.md  SECURITY.md  environment-dev.yml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: build_wheel.yml  build_wheel_windows.yml  build_wheels.yml  build_wheels_linux.yml  build_wheels_linux_macos.yml  build_wheels_macos.yml  docker-gdal.yml  lint.yml  release.yml  release_to_pypi.yml  test-windows.yml  tests-conda-installed.yml  tests-conda.yml
benchmarks/: README.md  conftest.py  test_core_benchmarks.py  test_io_benchmarks_geopandas.py  test_raw_io_benchmarks.py
ci/: README-wheel-building.md  environment-libgdal3.5.1.yml  environment-minimal.yml  environment.yml  manylinux2014_aarch64-vcpkg-gdal.Dockerfile  manylinux2014_x86_64-vcpkg-gdal.Dockerfile  manylinux_2_28_aarch64-vcpkg-gdal.Dockerfile  manylinux_2_28_x86_64-vcpkg-gdal.Dockerfile  requirements-wheel-test.txt  vcpkg-manylinux2014.json  vcpkg.json  vcpkg_linux_crosscompiling.patch
ci/custom-triplets/: arm64-linux.cmake  arm64-osx-dynamic-release.cmake  x64-linux-dynamic-release.cmake  x64-linux-dynamic.cmake  x64-osx-dynamic.cmake
ci/envs/: dev.yml  latest.yml  libgdal3.5.1.yml  minimal.yml  nightly-deps.yml  no-pyarrow.yml
ci/vcpkg-custom-ports/minizip/: 0001-remove-ifndef-NOUNCRYPT.patch  0002-add-declaration-for-mkdir.patch  CMakeLists.txt  README.md  lib-to-def.cmake  minizipConfig.cmake.in  pkgconfig.patch  portfile.cmake  unofficial-minizipConfig.cmake.in  usage  vcpkg.json
ci/vcpkg-custom-ports/zlib/: 0002-skip-building-examples.patch  portfile.cmake  vcpkg.json
docs/: environment.yml  requirements.txt
docs/source/: about.md  api.md  api.rst  concepts.md  conf.py  errors.md  index.md  install.md  introduction.md  known_issues.md  supported_formats.md
pyogrio/: __init__.py  _compat.py  _env.py  _err.pxd  _err.pyx  _geometry.pxd  _geometry.pyx  _io.pxd  _io.pyx  _ogr.pxd  _ogr.pyx  _port.pxd  _port.pyx  _version.py  _vsi.pxd  _vsi.pyx  arrow.py  core.py  errors.py  geopandas.py  pandas.py  raw.py  util.py
pyogrio/tests/: conftest.py  test_arrow.py  test_core.py  test_geopandas_io.py  test_path.py  test_raw_io.py  test_util.py  test_write_arrow.py  win32.py
pyogrio/tests/fixtures/: README.md  curve.gpkg  curvepolygon.gpkg  line_zm.gpkg  list_field_values_file.parquet  list_nested_struct_file.parquet  multisurface.gpkg  test_datetime.geojson  test_datetime_tz.geojson  test_gpkg_nulls.gpkg  test_multisurface.gpkg  test_nested.geojson  test_ogr_types_list.geojson
src/pyogrio/: _env.py  _err.pxd  _err.pyx  errors.py  geopandas.py
src/pyogrio/tests/: conftest.py  win32.py
tests/: conftest.py  test_core.py  test_geopandas_io.py  test_io.py  test_io_geopandas.py  test_io_pandas.py  test_raw_io.py
tests/benchmarks/: test_io_benchmarks.py  test_io_benchmarks_geopandas.py  test_io_benchmarks_pandas.py
tests/fixtures/: README.md
